[tool.poetry]
name = "code_analyzer"
version = "0.1.0"
description = ""
authors = ["Samuel Grayson <sam@samgrayson.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
networkx = "^2.6.3"
antlr4-grun = "0.4.1"
tqdm = "^4.62.3"
pygraphviz = "^1.7"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
ipython = "^7.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
